--- a/stm32-blinky/CMakeLists.txt
+++ b/stm32-blinky/CMakeLists.txt
@@ -2,11 +2,13 @@ PROJECT(stm32-blinky)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 ENABLE_LANGUAGE(ASM)
+SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
+		"../cmake/Modules/")
 
 FIND_PACKAGE(CMSIS REQUIRED)
 FIND_PACKAGE(StdPeriphLib REQUIRED)
 
-STM32_SET_PARAMS("512K" "64K" "0x20010000")
+STM32_SET_PARAMS("128K" "16K" "0x20004000")
 SET(CMAKE_EXE_LINKER_FLAGS "-T${CMAKE_CURRENT_BINARY_DIR}/stm32_flash.ld ${CMAKE_EXE_LINKER_FLAGS}")
 
 INCLUDE_DIRECTORIES(
@@ -22,5 +24,5 @@ SET(PROJECT_SOURCES
 ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES} ${CMSIS_STARTUP_SOURCE})
 TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}.elf ${CMSIS_LIBRARIES} ${StdPeriphLib_LIBRARIES})
 
-ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.hex DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Oihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.hex)
-ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.bin DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)
+ADD_CUSTOM_TARGET(hex DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Oihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.hex)
+ADD_CUSTOM_TARGET(bin DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)
